<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/nav_profile"
            android:checked="true"/>

        <item
            android:id="@+id/nav_report_issue"
            android:title="@string/nav_report_issue"
            android:icon="@drawable/ic_baseline_report_problem_24"/>

        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_help"
            android:icon="@drawable/ic_baseline_help_24"/>

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/nav_feedback"
            android:icon="@drawable/ic_baseline_feedback_24"/>
    </group>

</menu>